[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roadquantum"
version = "1.0.0"
description = "RoadQuantum - Enterprise Quantum Computing Framework"
readme = "README.md"
license = {text = "Proprietary - BlackRoad OS, Inc."}
requires-python = ">=3.10"
authors = [
    {name = "BlackRoad OS", email = "blackroad.systems@gmail.com"}
]
keywords = [
    "quantum-computing",
    "quantum-circuits",
    "qubits",
    "vqe",
    "qaoa",
    "grover",
    "quantum-algorithms",
    "quantum-simulation",
    "blackroad-os",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
]
visualization = [
    "matplotlib>=3.7.0",
]

[project.urls]
Homepage = "https://github.com/BlackRoad-OS/roadquantum"
Repository = "https://github.com/BlackRoad-OS/roadquantum"

[tool.setuptools.packages.find]
where = ["."]
include = ["roadquantum_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
